<?xml version="1.0" encoding="utf-8"?>
<resources>
    // Version 1.0.1
    <string name="stock_fleet">Stok armada</string>
    <string name="request">Permintaan</string>
    <string name="eng_request">Request</string>
    <string name="ritase">Ritase</string>
    <string name="fleet_title">Antrean Armada</string>
    <string name="add_fleet">Tambah armada</string>
    <string name="search_fleet">Cari taxi</string>
    <string name="message_add_fleet">Masukkan no. lambung armada untuk menambah armada secara manual.</string>
    <string name="message_error_character_input">No. lambung harus memiliki minimal 5 karakter.</string>
    <string name="hint_search_fleet_number">Masukan no taksi</string>
    <string name="add">Tambah</string>
    <string name="request_fleet">Request armada</string>
    <string name="add_fleet_failed_title">Menambahkan Fleet gagal</string>
    <string name="add_fleet_failed_message">Menambahkan fleet gagal, harap coba lagi atau tambahkan fleet lain</string>
    <string name="search_flett_error_title">Pencarian gagal</string>
    <string name="search_flett_error_message">Gagal melakukan pencarian fleet</string>
    <string name="depart">Berangkat</string>
    <string name="depart_description">Berangkatkan %s ?</string>
    <string name="with_passenger">Dengan Penumpang</string>
    <string name="without_passenger">Tanpa Penumpang</string>
    <string name="record_ritase">Pencatatan ritase</string>
    <string name="search_ritase">Cari no. antrean</string>
    <string name="description_record_ritase">No. antrean terakhir:</string>
    <string name="record_ritase_button">Catat ritase</string>
    <string name="search">Cari</string>
    <string name="ok">Ok</string>
    <string name="fleet_depart_with_passenger">berangkat dengan penumpang</string>
    <string name="fleet_depart_without_passenger">berangkat tanpa penumpang</string>
    <string name="search_queue_error_message">Gagal melakukan pencarian ticket antrean</string>
    <string name="failed_depart_title">Gagal Memberangkatkan Armada</string>
    <string name="failed_depart_description"> gagal diberangkatkan. Silakan coba lagi</string>
    <string name="fleet">Armada</string>
    <string name="add_fleet_desc">Masukkan no. lambung armada untuk menambah armada secara manual.</string>
    <string name="scan_number_side_title">Scan nomor lambung</string>
    <string name="side_text_desc">Silahkan arahkan kamera ke nomor lambung</string>
    <string name="side_text">Nomor Lambung</string>
    <string name="unavailable_queue">N/A</string>
    <string name="fleet_not_found">Armada belum tersedia</string>
    // Up to Version 1.0.1
    <string name="failed_get_queue">Gagal mendapatkan Antrean</string>
</resources>