<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/queue_fleet_nav"
    app:startDestination="@id/queueFleetFragment">

    <fragment
        android:id="@+id/queueFleetFragment"
        android:name="id.bluebird.vsm.feature.queue_fleet.main.FragmentQueueFleet"
        android:label="@string/fleet_title">
        <argument
            android:name="locationId"
            android:defaultValue="-1L"
            app:argType="long"
            app:nullable="false" />
        <argument
            android:name="subLocationId"
            android:defaultValue="-1L"
            app:argType="long"
            app:nullable="false" />
        <action
            android:id="@+id/action_queueFleetFragment_to_addFleetFragment"
            app:destination="@id/addFleetFragment">
            <argument
                android:name="subLocationId"
                android:defaultValue="0L"
                app:argType="long" />
            <argument
                android:name="fleetItems"
                android:defaultValue="@null"
                app:argType="id.bluebird.vsm.feature.queue_fleet.model.FleetItem[]"
                app:nullable="true" />
        </action>
        <action
            android:id="@+id/action_queueFleetFragment_to_searchFragment"
            app:destination="@id/searchFleetFragment" />
        <action
            android:id="@+id/action_queueFleetFragment_to_searchQueueFragment"
            app:destination="@id/searchQueueFragment">
            <argument
                android:name="location"
                android:defaultValue="0L"
                app:argType="long" />
            <argument
                android:name="subLocation"
                android:defaultValue="0L"
                app:argType="long" />
            <argument
                android:name="currentQueue"
                android:defaultValue=""
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/addFleetFragment"
        android:name="id.bluebird.vsm.feature.queue_fleet.add_fleet.FragmentAddFleet"
        android:label="@string/add_fleet">
        <argument
            android:name="location"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="subLocation"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="isSearchQueue"
            android:defaultValue="false"
            app:argType="boolean" />

        <action
            android:id="@+id/action_queueFleetFragment_to_addByCamera"
            app:destination="@id/addByCameraFragment">
            <argument
                android:name="currentQueue"
                android:defaultValue=""
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/searchFleetFragment"
        android:name="id.bluebird.vsm.feature.queue_fleet.search_fleet.FragmentSearchFleet"
        android:label="@string/search_fleet" />

    <fragment
        android:id="@+id/addByCameraFragment"
        android:name="id.bluebird.vsm.feature.queue_fleet.add_by_camera.FragmentAddByCamera"
        android:label="@string/scan_number_side_title" />

    <fragment
        android:id="@+id/searchQueueFragment"
        android:name="id.bluebird.vsm.feature.queue_fleet.search_fleet.FragmentSearchFleet"
        android:label="@string/search_ritase">
        <argument
            android:name="location"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="subLocation"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="currentQueue"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="isSearchQueue"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>

    <deepLink app:uri="android-app://id.bluebird.mall/queue_fleet" />

</navigation>